--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Straightline Refrigeration
-url: http://phpstack-154794-610084.cloudwaysapps.com/
+title: Alana's Runnin With Scizzors
+url: https://runninwithscizzors.com/
 permalink: pretty
